Update and rename index1.html to index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="navbar">
         <a href="#">Carmen District</a>
-        <a href="index1.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="#">About</a>
         <a href="Mission-vision.html">Mission/Vision</a>
         <a href="schools.html ">Schools</a>
